--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phonie</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- <h2>make some magic here!!</h2> -->
 
     <div class="flex">
       <div>
-        <img src="/images/phonie-picture.png" class="img1" />
+        <img src="./images/phonie-picture.png" class="img1" />
       </div>
       <div>
         <h2 class="header">XCEL-PHONIE</h2>
@@ -59,10 +59,10 @@
           ><br/> -->
           <label>Choose a network</label>
           <div>
-            <img src="/images/9-mobile-image.png" class="img2" alt="9mobile" />
-            <img src="/images/Airtel-logo.webp" class="img2" alt="Airtel" />
-            <img src="/images/glo-image.jpg" class="img2" alt="glo" />
-            <img src="/images/MTN logo.png" class="img2" alt="mtn" />
+            <img src="./images/9-mobile-image.png" class="img2" alt="9mobile" />
+            <img src="./images/Airtel-logo.webp" class="img2" alt="Airtel" />
+            <img src="./images/glo-image.jpg" class="img2" alt="glo" />
+            <img src="./images/MTN logo.png" class="img2" alt="mtn" />
           </div>
           <br />
           <!-- <option value="Choose a network">Choose a network</option>
