--- a/verification.html
+++ b/verification.html
@@ -4,94 +4,128 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phonie</title>
-
-    <link rel="stylesheet" href="styles.css" />
+    <title>Xcel-Phonie</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./asset/Logo.png" type="image/x-icon" />
+    \
+    <link rel="stylesheet" href="responsive.css" />
   </head>
-  <body>
-    <!-- <h2>make some magic here!!</h2> -->
 
-    <div class="flex">
+  <body>
+    <!-- nav -->
+    <nav>
+      <a href="index.html">
+        <img src="./images/Logo.png" alt="Logo" />
+      </a>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="verification.html">Verify Your Sim</a></li>
+      </ul>
+    </nav>
+
+    <div class="app">
       <div>
         <img src="/images/phonie-picture.png" class="img1" />
       </div>
-      <div>
-        <h3 class="header">XCEL-PHONIE</h3>
-        <h3 class="h2">Welcome to the Family!!</h3>
-        <h3>
-          A workshop with over twelve million<br />
-          influencers around the world
-        </h3>
+      <div class="xcel-form">
+        <p class="title">Welcome to the Family</p>
+        <p class="xcel-subtitle">
+          A workshop with over twelve million influencers around the world.
+        </p>
+
         <form>
-          <label for="first name">First Name </label><br />
-          <input
-            type="text"
-            name="First name"
-            id="name"
-            class="input"
-            placeholder="Enter your first name"
-            required
-          /><br />
-          <label for="last name">Last Name</label><br />
-          <input
-            type="text"
-            name="Last name"
-            id="name"
-            class="input"
-            placeholder="Enter your Last name"
-            required
-          /><br />
-          <label for="email">Email</label><br />
-          <input
-            type="email"
-            name="email"
-            class="input"
-            id="email"
-            placeholder="Enter your email"
-            required
-          /><br />
-          <label>Choose a network</label>
+          <div>
+            <label for="first name">First Name </label>
+            <input
+              type="text"
+              name="First name"
+              id="name"
+              class="input"
+              placeholder="Enter your first name"
+              required
+            />
+          </div>
+          <div>
+            <label for="last name">Last Name</label>
+            <input
+              type="text"
+              name="Last name"
+              id="name"
+              class="input"
+              placeholder="Enter your Last name"
+              required
+            />
+          </div>
+
+          <div>
+            <label for="email">Email</label>
+            <input
+              type="email"
+              name="email"
+              class="input"
+              id="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <label class="Network">Choose a network</label>
           <select
             name="mobile operator"
             id="mobileoperator"
             class="input"
             placeholder="mobile operator"
-          ><br/>
-<!--           <label>Choose a network</label> -->
-<!--           <div>
+          >
+            <!--                   <label>Choose a network</label> 
+                    <div>
             <img src="/images/9-mobile-image.png" class="img2" alt="9mobile" />
             <img src="/images/Airtel-logo.webp" class="img2" alt="Airtel" />
             <img src="/images/glo-image.jpg" class="img2" alt="glo" />
             <img src="/images/MTN logo.png" class="img2" alt="mtn" />
-          </div> -->
-          <option value="Choose a network"></option>
-            <option value="Airtel">Airtel</option>
-            <option value="Glo">Glo</option>
+          </div>  -->
+            <option value="Choose a network"></option>
+            <option value="AIRTEL">Airtel</option>
+            <option value="GLO">Glo</option>
             <option value="MTN">MTN</option>
-            <option value="9mobile">9mobile</option></select
-          ><br />
+            <option value="ETISALAT">9mobile</option>
+          </select>
 
-          <label for="Mobile number">Mobile Number</label><br />
+          <label for="Mobile number">Mobile Number</label>
+          <div class="verify-content">
+            <input
+              type="tel"
+              id="phone"
+              name="phone number"
+              pattern="[0-9]{3}[0-9]{4}[0-9]{3}"
+              placeholder="+234"
+              max-length="13"
+              class="input number-input"
+              autocomplete="0n"
+              required
+              maxlength="11"
+            />
+            <button type="button" class="verify-btn" id="verify-btn">
+              Verify
+            </button>
+          </div>
 
-          <input
-            type="tel"
-            id="phone"
-            name="phone number"
-            pattern="[0-9]{3}[0-9]{4}[0-9]{3}"
-            placeholder="+234"
-            max-length="13"
-            class="input number-input"
-            autocomplete="0n"
-            required
-          />
-          <button class="verify-button" id="verify">Verify</button><br />
-          <label id="result" style="color: green; visibility: hidden">Invalid</label><br>
+          <ul class="prefixes">
+            <li class="prefix-link">0803</li>
+            <li class="prefix-link">0806</li>
+            <li class="prefix-link">0813</li>
+            <li class="prefix-link">0816</li>
+            <li class="prefix-link">0913</li>
+            <li class="prefix-link">0906</li>
+            <li class="prefix-link">0903</li>
+          </ul>
+          <label id="result" style="color: red; visibility: hidden"
+            >Invalid</label
+          >
           <button class="register-btn">Register</button>
         </form>
       </div>
     </div>
 
-    <!-- // ============= EEND DO NOT EDIT ============== // -->
+    <!--   // ============= EEND DO NOT EDIT ============== // -->
     <script src="index.mjs" type="module"></script>
     <!-- // ============= EEND DO NOT EDIT ============== // -->
   </body>
