Worked on the autocomplete.

--- a/verification.html
+++ b/verification.html
@@ -101,14 +101,16 @@
               class="input number-input"
               autocomplete="0n"
               required
-              maxlength="11"
+              maxlength="14"
             />
+            
             <button type="button" class="verify-btn" id="verify-btn">
               Verify
             </button>
           </div>
+          <div id="suggestions"></div>
 
-          <ul class="prefixes">
+<!--           <ul class="prefixes">
             <li class="prefix-link">0803</li>
             <li class="prefix-link">0806</li>
             <li class="prefix-link">0813</li>
@@ -116,7 +118,7 @@
             <li class="prefix-link">0913</li>
             <li class="prefix-link">0906</li>
             <li class="prefix-link">0903</li>
-          </ul>
+          </ul> -->
           <label id="result" style="color: red; visibility: hidden"
             >Invalid</label
           >
